# near-ft

./: Cargo.toml  README.md
scripts/: dev-deploy.sh  storage_deposit.sh
scripts/neardev/: dev-account  dev-account.env
src/: lib.rs
